Translations - Refactoring, Convention, Divisions

--- a/projects/app-ui/src/assets/i18n/core/ar.json
+++ b/projects/app-ui/src/assets/i18n/core/ar.json
@@ -1,5 +1,12 @@
 {
-	"identity": {
-		"name": "إيكومز"
+	"core": {
+		"auth": {
+			"login": {
+				"title": "تسجيل الدخول"
+			},
+			"register": {
+				"title": "إنشاء حساب"
+			}
+		}
 	}
 }
