--- a/projects/app-ui/src/assets/i18n/core/en.json
+++ b/projects/app-ui/src/assets/i18n/core/en.json
@@ -1,5 +1,12 @@
 {
-	"identity": {
-		"name": "eComz"
+	"core": {
+		"auth": {
+			"login": {
+				"title": "Sign In"
+			},
+			"register": {
+				"title": "Create an account"
+			}
+		}
 	}
 }
