--- a/projects/app-ui/src/assets/i18n/shared/ar.json
+++ b/projects/app-ui/src/assets/i18n/shared/ar.json
@@ -1,5 +1,9 @@
 {
-	"home": {
-		"title": "Home"
+	"shared": {
+		"components": {
+			"avatar": {
+				"title": "أيقونة صورة الملف الشخصي"
+			}
+		}
 	}
 }
