--- a/projects/app-ui/src/assets/i18n/shared/en.json
+++ b/projects/app-ui/src/assets/i18n/shared/en.json
@@ -1,5 +1,9 @@
 {
-	"home": {
-		"title": "الرئيسية"
+	"shared": {
+		"components": {
+			"avatar": {
+				"title": "Profile image icon"
+			}
+		}
 	}
 }
